# stereo2spatial

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  infer.py  pyproject.toml  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: README.md  train.yaml  train_stage_2.yaml  train_with_gan.yaml  train_with_gan_stage_2.yaml
docs/: architecture.md
scripts/: README.md  __init__.py
scripts/atmos/: __init__.py  atmos_utils.py  convert_atmos.py  download_atmos.py
scripts/data/: __init__.py  build_qc_dataset_subset.py  decode_sample_for_qc.py  delete_dataset_samples.py  detect_upmix.py  preprocess_dataset.py  update_qc_album_label.py
scripts/export/: __init__.py  export_model_bundle.py
stereo2spatial/: __init__.py
stereo2spatial/cli/: __init__.py  infer.py  train.py
stereo2spatial/codecs/: __init__.py
stereo2spatial/common/: __init__.py  checkpoints.py  windowing.py
stereo2spatial/inference/: __init__.py  audio.py  checkpoint.py  export_bundle.py  runner.py  sampling.py
tests/: test_common_checkpoints.py  test_common_windowing.py  test_config_loader.py  test_config_validation.py  test_inference_audio.py  test_inference_export_bundle.py  test_inference_sampling_checkpoint.py  test_trainer_loop_helpers.py  test_training_checkpointing_helpers.py  test_training_dataset_epoch_io.py  test_training_ema.py  test_training_loss_terms.py  test_training_losses_windowed.py  test_training_optimizer_runtime.py  test_training_scheduled_sampling.py  test_training_trainer_step.py
(+48 files in other folders)
