[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stereo2spatial"
version = "0.1.0"
description = "Stereo/mono to spatial latent training and inference stack"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "stereo2spatial" }
]
dependencies = [
  "accelerate>=0.33",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "soundfile>=0.12",
  "torch>=2.1",
  "torchdiffeq>=0.2.4",
  "torchaudio>=2.1",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.2",
  "ruff>=0.6",
  "types-PyYAML>=6.0"
]

[project.scripts]
stereo2spatial-train = "stereo2spatial.cli.train:main"
stereo2spatial-infer = "stereo2spatial.cli.infer:main"

[tool.setuptools.packages.find]
include = ["stereo2spatial*"]

[tool.setuptools.package-data]
stereo2spatial = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["stereo2spatial/vendor", "scripts", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["stereo2spatial/vendor/"]

[[tool.mypy.overrides]]
module = ["stereo2spatial.vendor.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
